tests/cases/should_fail/blocks/unclosed_trait_def.stderr
error: encountered unclosed delimiter `{`, add a `}` after the inner expression
 --> $DIR/unclosed_trait_def.hash:3:1
2 |       merge: (T, T) -> T = () => };
3 |   {;
  |   ^ here
4 |   
